--- a/EventsApp/static/css/style.css
+++ b/EventsApp/static/css/style.css
@@ -355,6 +355,7 @@ form.logout-form {
     border-radius: 0.5rem;
     border-left: 5px solid var(--accent-color);
     transition: background-color 0.2s;
+    margin-bottom: 10px;
 }
 
 .agenda-event-item:hover {
